src/main/java/org/example/breakoutdrop/Errors/Client/SameSkin.java
package org.example.breakoutdrop.Errors.Client;

public class SameSkin extends RuntimeException {
    public SameSkin(String message) {
        super(message);
    }
}
